# esp-rust-board-discovery

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
examples/: adafruit_feather_sh1107.rs  adafruit_feather_sh1107_text.rs  adxl345_i2c.rs  bh1750_i2c.rs  blinky.rs  bme280_i2c.rs  bme280alt_i2c.rs  bme680_i2c.rs  bmp580_i2c.rs  button-interrupt.rs  button.rs  enviro_display_spi.rs  gc9a01_spi.rs  gc9a01_spi_text.rs  gp2y1010au0f_dust.rs  hc_sr501.rs  hs3003_i2c.rs  hs3003_i2c_debug.rs  http_client.rs  i2c_scan.rs  icm42670p.rs  ili9341_spi.rs  ili9341_spi_text.rs  ld2410.rs  ltr559_i2c.rs  max7219_8x8_matrix.rs  mics6814.rs  modulino_buttons_i2c.rs  modulino_buzzer_i2c.rs  modulino_distance_i2c.rs  modulino_joystick_i2c.rs  modulino_knob_i2c.rs  modulino_latch_relay_i2c.rs  modulino_movement_i2c.rs  modulino_pixels_i2c.rs  modulino_thermo_i2c.rs  modulino_vibro_i2c.rs  pms5003.rs  scd40_i2c.rs  sgp30_i2c.rs  (+7 more)
src/: main.rs
