[package]
edition = "2024"
name = "esp-rust-board-discovery"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
embedded-hal = "1.0.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
defmt = "1.0.1"
embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }

[dev-dependencies]
shtcx = "1.0.0"
icm42670 = "0.2.0"
critical-section = "1.2.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", features = ["esp32c3"] }
smart-leds = "0.4.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
