[package]
edition = "2024"
name = "esp-rust-board-discovery"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
embedded-hal = "1.0.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
defmt = "1.0.1"
embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
esp-alloc = "0.9.0"
nb = "1.0.1"

[dev-dependencies]
shtcx = "1.0.0"
icm42670 = "0.2.0"
critical-section = "1.2.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community", features = [
    "esp32c3",
] }
smart-leds = "0.4.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
bme280 = "0.5.1"
bosch-bme680 = "1.0.4"
st7735-lcd = "0.10.0"
tinybmp = "0.6.0"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
bh1750 = "0.1.0"
sgp30 = "1.0.0"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e" }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-rtos = { version = "0.2.0", features = ["esp32c3", "esp-radio"] }
esp-radio = { version = "0.17.0", features = [
    "esp32c3",
    "wifi",
    "smoltcp",
    "unstable",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
embedded-io = { version = "0.6.1", default-features = false }
pmsx003 = "1.0.0"
hs3003 = "0.1.1"
modulino = "0.1.0"
ld2410 = "1.0.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
